# lifeline

./: .gitignore  CONTRIBUTING.md  HACKATHON.MD  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: deploy-demo-pages.yml
docs/: AGENT_BRIEFING_MODE.md  BUILD_PLAN.md  CODEX_COLLABORATION.md  DEMO_VIDEO_SCRIPT_180S.md  EXPORT_RECOVERY.md  JUDGES_SUBMISSION.md  LIFELINE_OS.md  LIFELINE_OS_EN.md  PROTOTYPE_STATUS.md  RED_TEAM_AGENT_AUDIT_2026-07-21.md  RED_TEAM_AUDIT_2026-07-19.md  RED_TEAM_FOLLOWUP_2026-07-20.md  VERIFICATION_ARTIFACT.md
docs/adr/: 0001-map-stack.md
lifeline/: __init__.py  __main__.py  agent.py  alerts.py  approvals.py  auth.py  briefing.py  core.py  export.py  incidents.py  scenario.py  server.py  simulate.py  trace.py  validators.py  verification.py
scenarios/: flood_v1.json  flood_v1_whatifs.json
tests/: test_agent.py  test_alerts.py  test_approvals.py  test_auth.py  test_briefing.py  test_core.py  test_demo_assets.py  test_export.py  test_incidents.py  test_ops_assets.py  test_scenario.py  test_server.py  test_simulate.py  test_validators.py  test_verification.py
tools/: build_demo_bundle.py
visual/: LIFELINE_architecture.md
web/: .nojekyll  demo-data.js  index.html  ops.html  room.html
web/demo/: README.md  agent_briefing.json  agent_briefing.seal.json  plan.json  plan.seal.json  room.geojson  simulation.json  simulation.seal.json  verification.json  verification.seal.json
