[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lifeline-humanitarian"
version = "0.1.0"
description = "Open infrastructure for human-approved humanitarian coordination"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Anna Tchijova" },
]
keywords = ["humanitarian", "emergency-coordination", "deterministic", "auditability"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Other Audience",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering",
]

[project.scripts]
lifeline = "lifeline.__main__:main"

[tool.setuptools.packages.find]
include = ["lifeline*"]
